# andromeda

./: .gitignore  CMakeLists.txt  andromeda.sln  andromeda.vcxproj  andromeda.vcxproj.filters  build.bat  common.cmake  design.txt  libdesign.txt  notes.txt  readme.txt  todo.txt
ATest/: ATest.vcxproj  ATest.vcxproj.filters  font.txt
ATest/src/: app.cpp  app.h  circular_path_component.cpp  circular_path_component.h  console.cpp  console.h  debugger.cpp  debugger.h  factory.cpp  factory.h  framework.cpp  framework.h  game.cpp  game.h  main.cpp  plane_test_component.cpp  plane_test_component.h  player.cpp  player.h  random_path_component.cpp  random_path_component.h  test_bounds.cpp  test_bounds.h  test_effect.cpp  test_effect.h  test_engine.cpp  test_engine.h  test_event.cpp  test_event.h  test_fs.cpp  test_fs.h  test_renderable.cpp  test_renderable.h  test_xml.cpp  test_xml.h
Docs/: code.txt  docs.txt  libdesign.txt  notes.txt  readme.txt  todo.txt
andromeda/: readme.txt
andromeda/common/: CMakeLists.txt  class.cpp  class.h  debug.h  exception.h  glm.h  log.h  observer.cpp  observer.h  singleton.h  template.h  template_map.h  types.h
andromeda/core/: CMakeLists.txt  andromeda.cpp  andromeda.h  color.h  region.h
andromeda/core/Engine/: config.cpp  config.h  display.h  engine.cpp  engine.h  events.h  invoke.cpp  invoke.h  module.cpp  module.h  scene.h  timing.cpp  timing.h
andromeda/core/Geometry/: geometry.cpp  geometry.h  geometry_builder.cpp  geometry_builder.h  geometry_cube.cpp  geometry_cube.h  geometry_cylinder.cpp  geometry_desc.cpp  geometry_desc.h  geometry_ellipse.cpp  geometry_ellipse.h  geometry_generate.cpp  geometry_generate.h  geometry_polygon.cpp  geometry_polygon.h  geometry_surface.cpp  geometry_surface.h  geometry_surface_function.h  primitive_builder.cpp  primitive_builder.h  shape.cpp  shape.h  tesselation.cpp  tesselation.h
andromeda/core/Graphics/: buffer.h  geometry.h  graphics.cpp  graphics.h  material.h  mesh.cpp  mesh.h  renderer.h  shader.h  texture.h  types.h  view.cpp  view.h
andromeda/core/Input/: generic_keyboard.cpp  generic_keyboard.h  generic_mouse.cpp  generic_mouse.h  input.h  keyboard.cpp  keyboard.h  mouse.cpp  mouse.h
andromeda/core/Math/: glm_conversion.h  glm_extension.h  glm_infinity.h  math.h  matrix_stack.h  plane.h
andromeda/effect/: CMakeLists.txt  function.h  parser.cpp  parser.h  section.h
andromeda/opengl/: CMakeLists.txt  geometry.cpp  geometry.h  index_buffer.cpp  index_buffer.h  mapping.h  opengl.cpp  opengl.h  shader.cpp  shader.h  shader_program.cpp  shader_program.h  texture.cpp  texture.h  vertex_buffer.cpp  vertex_buffer.h
andromeda/shared/: context.h  graphics.h  platform.cpp  platform.h  readme.txt
andromeda/windows/: CMakeLists.txt  windows_gui.cpp  windows_gui.h  windows_opengl.cpp  windows_opengl.h  windows_platform.cpp  windows_platform.h
common/: addBoost.cmake  addGLEW.cmake  addGLM.cmake  readme.txt
include/andromeda/: andromeda.h  andromeda_init.h  andromeda_main.h  debug.h  exception.h  geometry.h  glm.h  graphics.h  graphics_conversion.h  graphics_types.h  opengl.h  resources.h  stddef.h
include/andromeda/Containers/: template_map.h  template_multimap.h  vector.h
include/andromeda/Engine/: application.h  config.h  display.h  engine.h  engine.hpp  invoker.h  module.h  system.h  updater.h
include/andromeda/Events/: event.h  event_manager.h  event_manager.hpp  resize.h
include/andromeda/Game/: application.h  camera.h  camera_component.h  camera_static.h  camera_target.h  component.h  dummy_component.h  entity.h  entity.hpp  game_object.h  geometry_component.h  light_component.h  mesh_component.h  render_component.h  scene_component.h  text_component.h  transform.h  transform_component.h  view_component.h
include/andromeda/Geometry/: geometry.h  geometry_builder.h  geometry_cube.h  geometry_cylinder.h  geometry_desc.h  geometry_generate.h  geometry_surface.h  geometry_surface_function.h  primitive_builder.h  shape.h  tesselation.h
include/andromeda/Graphics/: buffer.h  camera.h  context.h  display.h  effect.h  effect_buffer.h  font.h  font_atlas.h  font_graphics.h  frame_buffer.h  geometry.h  geometry_builder.h  (+19 more)
include/nvfx/: nv_effect.h  nv_effect_buffer.h
include/opengl/: graphics_gl.h  graphics_gl_conversions.h
include/xeffect/: xeffect.h
res/: andromeda.txt  resources.xml  star_wars.txt
res/models/: bb8.dae  box.dae
res/shader/: constant_color.fs  deferred.xml  deferredGeometry.fs  deferredGeometry.vs  deferredRenderer.fs  deferredRenderer.vs  deferredShadow.fs  display_normal.gs  font.glslfx  lighting_BlinnPhong.glsl  lighting_Phong.glsl  particle_draw.fs  particle_draw.gs  particle_draw.vs  passthru.vs  section.glslfx  shader.fs  shader.glslfx  shader.vs  shader.xml  shader_example.xml  simpleEffect1.glslfx  skybox.fs  skybox.vs  test.glslfx  vector.fs  vector.xml
res/shaders/: calc_Normal.glsl  deferredGeometry.fs  deferredGeometry.vs  deferredRenderer.fs  deferredShadow.vs  display_wireframe.gs  new_style.shader  shader.xml  skybox.fs  skybox.vs  vector.vs
res/xml/: effect.xml
resource/: bezier.xcf
resource/test/: test.blend  test.blend1  test.dae
src/: CMakeLists.txt  test.cpp
src/andromeda/: andromeda.cpp  andromeda.h  andromeda_config.h  graphics.cpp  graphics_conversion.cpp  resources.cpp
src/nvfx/: nv_effect.cpp  nv_effect_material_buffer.cpp
src/opengl/: graphics_gl.cpp
src/windows/: andromeda_windows.cpp  andromeda_windows.h
src/xeffect/: x_effect.cpp  x_effect.h  x_exception.h  x_extension.cpp  x_extension.h  x_name.h  x_node.cpp  x_node.h  x_pass.cpp  x_pass.h  x_shader.cpp  x_shader.h  x_shader_builder.cpp  x_shader_builder.h  x_shader_source.cpp  x_shader_source.h  x_state.cpp  x_state.h  x_state_builder.cpp  x_state_builder.h  x_technique.cpp  x_technique.h  x_type_conversion.cpp  x_type_conversion.h  x_uniform.h  x_uniform_builder.cpp  x_uniform_builder.h  x_variable_map.cpp  x_variable_map.h  xeffect.cpp  xloader.cpp  xloader.h
test/: CMakeLists.txt  main.cpp
test/app/: app.cpp  app.h  test.h
test/config/: settings.json
(+332 files in other folders)
